--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@500&display=swap');
-
 *{
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
     box-sizing: border-box;
 }
 
@@ -11,43 +12,83 @@ html,body{
 }
 
 body{
-    display: grid;
-    place-items: center;
-}
+    background-color: #fafafa;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-.light-mode {
-    background-color: white;
-    color: black;
-}
-.dark-mode {
-    background-color: black;
-    color: white;
+    height: 100vh;
+    margin: 0;
+    transition: background 0.2s linear;
 }
 
 .container{
-    background-color: rgb(255, 164, 164);
+    background-color: dimgrey;
     justify-content: center;
-    align-items: stretch;
+    align-items: center;
     text-align: center;
     padding: 4px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
+    
 }
 
 .resultado{
-    background-color: rgb(158, 55, 55);
     justify-content: center;
     align-items: center;
+    text-align: center;
     border: 5px;
     border-radius: 10px;
-    padding: 25px 30px;
-}
-
-.mode{
-    font-size: small;
-    justify-content: center;
-    text-align: center;
+    padding: 20px 25px;
 }
 
 
+body.dark {
+    background: #292c35;
+    color: #fafafa;
+}
+
+.checkbox {
+    opacity: 0;
+    position: absolute;
+}
+  
+.label {
+    background-color: #111;
+    border-radius: 50px;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+    padding: 5px;
+    position: relative;
+    height: 26px;
+    width: 50px;
+    transform: scale(1.5);
+}
+  
+.label .ball {
+    background-color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    height: 22px;
+    width: 22px;
+    transform: translateX(0px);
+    transition: transform 0.2s linear;
+}
+  
+.checkbox:checked + .label .ball {
+    transform: translateX(24px);
+}
+  
+.fa-moon {
+    color: #f1c40f;
+}
+  
+.fa-sun {
+    color: #f39c12;
+}
