--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html,body{
 }
 
 body{
-    background-color: #fafafa;
+    background-color: #f1f1f1;
     display: flex;
     align-items: center;
     justify-content: center;
