--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body{
     justify-content: center;
     align-items: center;
     text-align: center;
+    font-size: 35px;
     border: 5px;
     border-radius: 10px;
     padding: 20px 25px;
