--- a/style.css
+++ b/style.css
@@ -12,30 +12,34 @@ html,body{
 }
 
 header{
-    position: fixed;
+    position: absolute;
     font-size: 50px;
     top: 5px;
     width: 100%;
     text-align: center;
-
 }
+
 footer{
     font-size: 22px;
-    bottom: 7px;
+    text-align: center;
+    bottom: 1%;
+    left: 0;
+    height: 40px;
     position: fixed;
     width: 90%;
-    text-align: center;
-
+    display: block;
+    top: 95%;
 }
 
 img{
     max-width: 222px;
     max-height: 116px;
     object-fit: fill;
-    position: absolute;
+    position: fixed;
     align-items: stretch;
-    top: 60px;
+    top: 65px;
     transform: rotate(14deg);
+    margin: 5px;
 }
 
 body{
@@ -57,7 +61,9 @@ body{
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    
+    position: fixed;
+    margin: 5px;
+    top: 200px;
 }
 
 .resultado{
@@ -125,3 +131,44 @@ body.dark {
 .fa-sun {
     color: #f39c12;
 }
+
+@media (max-width: 1191px) {
+    .container{
+        top: 277px
+    }
+    img{
+        top: 146px
+    }
+    }
+@media (max-width: 600px) {
+    .container{
+        top: 295px
+    }
+    img{
+        top: 175px
+    }
+    footer{
+        bottom: 6%;
+    }
+    }
+@media (max-width: 416px) {
+    footer{
+        bottom: 15px;
+    }
+    }
+@media (max-width: 487px) {
+    .container{
+        top: 350px
+    }
+    img{
+        top: 228px
+    }
+    }
+@media (max-width: 360px) {
+    .container{
+        top: 404px
+    }
+    img{
+        top: 286px
+    }
+    }
