--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ header{
 footer{
     font-size: 22px;
     text-align: center;
-    bottom: 1%;
-    top: 98%;
+    bottom: 5px;
+    top: 99%;
     position: absolute;
     display: block;
 }
