--- a/style.css
+++ b/style.css
@@ -6,33 +6,44 @@
 }
 
 html,body{
-    min-height: 100vh;
+    height: 100vh;
     padding: 0;
     margin: 0;
 }
 
 header{
-    position: absolute;
     font-size: 50px;
     top: 5px;
     width: 100%;
     text-align: center;
+    justify-content: space-between;
+    display: flex;
 }
 
 footer{
     font-size: 22px;
     text-align: center;
+    justify-content: space-between;
     bottom: 5px;
     top: 99%;
-    position: absolute;
-    display: block;
+    display: flex;
+}
+
+.geral{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main{
+    flex: 1;
+    padding: 10px;
 }
 
 img{
     max-width: 222px;
     max-height: 116px;
     object-fit: fill;
-    position: absolute;
     align-items: stretch;
     top: 65px;
     transform: rotate(14deg);
@@ -41,11 +52,11 @@ img{
 
 body{
     background-color: #f1f1f1;
-    display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
     margin: 0;
+    padding: 0;
     transition: background 0.2s linear;
 }
 
@@ -61,6 +72,7 @@ body{
     position: absolute;
     margin: 5px;
     top: 200px;
+    height: 100%;
 }
 
 .resultado{
