--- a/style.css
+++ b/style.css
@@ -7,87 +7,62 @@
 
 html,body{
     height: 100vh;
-    padding: 0;
-    margin: 0;
+}
+
+body{
+    height: 100vh;
+    background-color: #f1f1f1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    transition: background 0.2s linear;
 }
 
 header{
     font-size: 50px;
-    top: 5px;
-    width: 100%;
-    text-align: center;
-    justify-content: space-between;
     display: flex;
-}
-
-footer{
-    font-size: 22px;
-    text-align: center;
-    justify-content: space-between;
-    bottom: 5px;
-    top: 99%;
-    display: flex;
-}
-
-.geral{
-    display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    min-height: 100vh;
+    text-align: center;
 }
-
-main{
-    flex: 1;
-    padding: 10px;
-}
-
 img{
     max-width: 222px;
     max-height: 116px;
     object-fit: fill;
-    align-items: stretch;
     top: 65px;
-    transform: rotate(14deg);
+    transform: rotate(15deg);
     margin: 5px;
 }
-
-body{
-    background-color: #f1f1f1;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    transition: background 0.2s linear;
-}
-
 .container{
     background-color: dimgrey;
+    display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
     padding: 4px;
+    width: fit-content;
+    margin: auto;
+    margin-top: 5px;
     border-radius: 10px;
-    display: flex;
     flex-direction: column;
-    position: absolute;
-    margin: 5px;
-    top: 200px;
-    height: 100%;
 }
-
 .resultado{
     justify-content: center;
     align-items: center;
-    text-align: center;
     font-size: 35px;
-    border: 5px;
     border-radius: 10px;
     padding: 20px 25px;
+    text-align: center;
 }
-
 .revela{
     width: 90px;
     height: 30px;
+}
+footer{
+    font-size: 22px;
+    text-align: center;
+    display: block;
 }
 
 
@@ -140,36 +115,3 @@ body.dark {
 .fa-sun {
     color: #f39c12;
 }
-
-@media (max-width: 1191px) {
-    .container{
-        top: 277px
-    }
-    img{
-        top: 146px
-    }
-    }
-@media (max-width: 600px) {
-    .container{
-        top: 295px
-    }
-    img{
-        top: 175px
-    }
-    }
-@media (max-width: 487px) {
-    .container{
-        top: 350px
-    }
-    img{
-        top: 228px
-    }
-    }
-@media (max-width: 360px) {
-    .container{
-        top: 404px
-    }
-    img{
-        top: 286px
-    }
-    }
